--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -3,10 +3,8 @@
     <div class='col-1 col-lg-2'></div>
     <div class='col'>
       <div class='card'>
-        <div class='card-header bg-light'>
-          <h2 class='h4 text-center'>About this app</h2>
-        </div>
         <div class='card-body'>
+          <h2 class='h4'>About this app</h2>
           <p>
             {{{packageJson.description}}}
           </p>
