--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,12 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css">
-  <style>
-    .max-h-800 {
-      max-height: 800px;
-      overflow-y: auto;
-    }
-  </style>
 </head>
 
 <body>
@@ -34,6 +28,10 @@
       <div class="navbar-start">
         <a class="navbar-item" href="/">
           Home
+        </a>
+
+        <a class="navbar-item" href="/domains">
+          My Domains
         </a>
 
         <a class="navbar-item" href="/about">
