feat: add domain module

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,8 +30,8 @@
           Home
         </a>
 
-        <a class="navbar-item" href="/domains">
-          My Domains
+        <a class="navbar-item" href="/my-domains">
+          Manage Domains
         </a>
 
         <a class="navbar-item" href="/about">
