feat: add domain status toggle

--- a/views/domains.handlebars
+++ b/views/domains.handlebars
@@ -25,12 +25,12 @@
                   <td>{{type}}</td>
                   <td>{{status}}</td>
                   <td class="is-flex is-justify-content-space-between">
-                    <form method="PUT" action="/api/domain/{{id}}/toggle">
+                    <form method="POST" action="/api/domain/{{id}}/toggle-status">
                       <button title="Enable / disable this domain" class="button">
-                        Toggle
+                        Status
                       </button>
                     </form>
-                    <form method="DELETE" action="/api/domain/{{id}}/delete">
+                    <form method="POST" action="/api/domain/{{id}}/delete">
                       <button title="Delete this domain" class="button">
                         Delete
                       </button>
