--- a/views/domains.handlebars
+++ b/views/domains.handlebars
@@ -1,4 +1,13 @@
 <div class="container-fluid">
+  <div id="domain-alert" class="message is-hidden">
+    <div class="message-header">
+      <p>Success!</p>
+      <button class="delete" aria-label="delete"></button>
+    </div>
+    <div class="message-body">
+      <p>Test</p>
+    </div>
+  </div>
   <h1 class="title is-2">Manage your domains</h1>
   <p class="subtitle">Domains are your Ghost blog's addresses on the internet. Before sending Webhooks, you must first create at least one new domain your readers can subscribe to. </p>
   <a class="is-link">Read more about Domains</a>
@@ -9,7 +18,7 @@
         <div class="card-content">
           <h2 class="title is-4">Active domains</h2>
           <div class="table-container">
-            <table class="table is-striped ">
+            <table class="table is-striped">
               <thead>
                 <tr>
                   <th>Domain name</th>
@@ -85,3 +94,5 @@
   </div>
 
 </div>
+
+<script src="js/domain.js"></script>
