--- a/views/domains.handlebars
+++ b/views/domains.handlebars
@@ -2,7 +2,7 @@
   <div id="domain-alert" class="message is-hidden">
     <div class="message-header">
       <p>Success!</p>
-      <button class="delete" aria-label="delete"></button>
+      <button id="domain-hide-button" class="delete" aria-label="delete"></button>
     </div>
     <div class="message-body">
       <p>Test</p>
