--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,8 +61,8 @@
     {{{body}}}
   </main>
 
-  <script src="css/main.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/css/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
