--- a/src/client/styles/icons.scss
+++ b/src/client/styles/icons.scss
@@ -1,2 +1,3 @@
 @import '../../../node_modules/css.gg/icons/scss/trash.scss';
 @import '../../../node_modules/css.gg/icons/scss/calibrate.scss';
+@import '../../../node_modules/css.gg/icons/scss/play-list-search.scss';
