--- a/views/domain-notifications.handlebars
+++ b/views/domain-notifications.handlebars
@@ -1,16 +1,64 @@
 <div class="container-fluid">
-  <div id="domain-alert" class="message is-hidden">
-    <div class="message-header">
-      <p>Success!</p>
-      <button id="domain-hide-button" class="delete" aria-label="delete"></button>
+
+  <a class="is-link" href="/my-domains">Back to my domains</a>
+
+  <header class="level mt-4 ">
+    <div class="card mr-2 level-item has-text-centered">
+      <div class="card-content">
+        <h1 class="heading is-2">Domain </h1>
+        <p class="title">{{domain.name}}</p>
+      </div>
     </div>
-    <div class="message-body">
-      <p>Test</p>
+    <div class="card mx-2 level-item has-text-centered">
+      <div class="card-content">
+        <h1 class="heading is-2">Status </h1>
+        <p class="title">{{domain.status}}</p>
+      </div>
+    </div>
+
+    <div class="card mx-2 level-item has-text-centered">
+      <div class="card-content">
+        <h1 class="heading is-2">Access </h1>
+        <p class="title">{{domain.type}}</p>
+      </div>
+    </div>
+
+    <div class="card ml-2 level-item has-text-centered">
+      <div class="card-content">
+        <p class="heading">Notifications</p>
+        <p class="title">{{count}}</p>
+      </div>
+    </div>
+  </header>
+
+  <div class="card block">
+    <div class="card-content">
+      <h2 class="title is-4">Notifications</h2>
+      <div class="table-container">
+        <table class="table is-striped">
+          <thead>
+            <tr>
+              <th>Ghost Title</th>
+              <th>Ghost URL</th>
+              <th>Ghost Visibility</th>
+              <th>Notification Type</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#each notifications}}
+            <tr>
+              <td>{{ghostTitle}}</td>
+              <td>{{ghostOriginalUrl}}</td>
+              <td>{{type}}</td>
+              <td>{{ghostVisibility}}</td>
+            </tr>
+            {{/each}}
+
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-  <h1 class="title is-2">Check details for domain {{domain.name}}</h1>
-
-
 </div>
 
 <script src="/js/domain-notifications.js"></script>
