--- a/views/domain-notifications.handlebars
+++ b/views/domain-notifications.handlebars
@@ -1,6 +1,13 @@
 <div class="container-fluid">
 
-  <a class="is-link" href="/my-domains">Back to my domains</a>
+  <a class="is-link" href="/my-domains">
+    <span class="icon-text">
+      <span class="icon">
+        <i class="gg-arrow-left-o"></i>
+      </span>
+      <span>Back to my domains</span>
+    </span>
+  </a>
 
   <header class="level mt-4 ">
     <div class="card mr-2 level-item has-text-centered">
