feat: add status indicator

--- a/src/client/styles/icons.scss
+++ b/src/client/styles/icons.scss
@@ -2,3 +2,4 @@
 @import '../../../node_modules/css.gg/icons/scss/calibrate.scss';
 @import '../../../node_modules/css.gg/icons/scss/play-list-search.scss';
 @import '../../../node_modules/css.gg/icons/scss/arrow-left-o.scss';
+@import '../../../node_modules/css.gg/icons/scss/log-off.scss';
