feat: add alert to connection status

--- a/views/domain-notifications.handlebars
+++ b/views/domain-notifications.handlebars
@@ -106,8 +106,9 @@
         </div>
       </div>
 
-      <div class="notification mt-4 is-info">
-        Test
+      <div id="connection-notification" class="notification mt-4 is-info is-hidden">
+        <button id="connection-notification-close" class="delete"></button>
+        <p></p>
       </div>
     </div>
   </div>
