feat: add subscription URL to domain

--- a/views/domain-notifications.handlebars
+++ b/views/domain-notifications.handlebars
@@ -84,7 +84,7 @@
             <span id="connection-indicator-text" class="ms-1">Connecting ...</span>
           </div>
           <p><b>Subscription URL:</b></p>
-          <pre class="block"><code>/api/notification/subscribe</code></pre>
+          <pre class="block"><code>/api/domain/{{domain.id}}/notifications/subscribe</code></pre>
 
           <p><b>Actions: </b></p>
           <div class="is-flex is-justify-content-start">
