--- a/views/domain-notifications.handlebars
+++ b/views/domain-notifications.handlebars
@@ -44,7 +44,21 @@
     <div class="column is-two-third">
       <div class="card block">
         <div class="card-content">
-          <h2 class="title is-4">Notifications</h2>
+          <div class="is-flex is-justify-content-space-between">
+
+            <h2 class="title is-4">Notifications</h2>
+            <div>
+              <form method="POST" action="/api/domain/{{domain.id}}/notifications/delete">
+                <button title="Delete all notifications for this domain" class="button">
+                  <span class="icon">
+                    <i class="gg-trash"></i>
+                  </span>
+                </button>
+              </form>
+            </div>
+
+          </div>
+
           <div class="table-container">
             <table class="table is-striped">
               <thead>
@@ -88,13 +102,6 @@
 
           <p><b>Actions: </b></p>
           <div class="is-flex is-justify-content-start">
-            <form method="POST" action="/api/domain/{{domain.id}}/notifications/delete">
-              <button title="Delete all notifications for this domain" class="button is-danger">
-                <span class="icon">
-                  <i class="gg-trash"></i>
-                </span>
-              </button>
-            </form>
             <form class="mr-2" method="POST" action="/api/domain/{{domain.id}}/toggle-status">
               <button title="Enable / disable this domain" class="button is-warning">
                 <span class="icon">
