fix: created timestamp for notification

--- a/views/domain-notifications.handlebars
+++ b/views/domain-notifications.handlebars
@@ -77,6 +77,7 @@
                   <th>Ghost URL</th>
                   <th>Ghost Visibility</th>
                   <th>Notification Type</th>
+                  <th>Created at</th>
                 </tr>
               </thead>
               <tbody id="domain-notification-table-body">
@@ -86,6 +87,7 @@
                   <td>{{ghostOriginalUrl}}</td>
                   <td>{{ghostVisibility}}</td>
                   <td>{{type}}</td>
+                  <td>{{created}}</td>
                 </tr>
                 {{/each}}
 
