chore: adjust routes

--- a/views/my-domains/notifications.handlebars
+++ b/views/my-domains/notifications.handlebars
@@ -54,7 +54,7 @@
       <p></p>
     </div>
   </div>
-  <a class="is-link" href="/my-domains">
+  <a class="is-link" href="/my-domains/home">
     <span class="icon-text">
       <span class="icon">
         <i class="gg-arrow-left-o"></i>
