--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,10 +43,10 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary">
+            <a href="/signup" class="button is-primary">
               <strong>Sign up</strong>
             </a>
-            <a class="button is-light">
+            <a href="/login" class="button is-light">
               Log in
             </a>
           </div>
