--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -6,15 +6,15 @@
       <div class="card mt-6">
         <div class="card-content">
           <h1 class="h2 text-center">Login to Ghost Notifier</h1>
-          <form action="/api/user/login">
+          <form method="POST" action="/api/user/login">
             <div class="field">
-              <label for="user-login-email" class="label">Email</label>
-              <input required placeholder="Please enter your Email address" type="email" class="input">
+              <label for="email" class="label">Email</label>
+              <input required id="email" name="email" placeholder="Please enter your Email address" type="email" class="input">
             </div>
 
             <div class="field">
-              <label for="user-signup-password" class="label">Password</label>
-              <input required placeholder="Please enter your password" type="password" class="input">
+              <label for="password" class="label">Password</label>
+              <input required id="password" name="password" placeholder="Please enter your password" type="password" class="input">
             </div>
 
             <div class="field">
