--- a/views/user/signup.handlebars
+++ b/views/user/signup.handlebars
@@ -6,15 +6,15 @@
       <div class="card mt-6">
         <div class="card-content">
           <h1 class="h2 text-center">Create account</h1>
-          <form action="/api/user/signup">
+          <form method="POST" action="/api/user/create">
             <div class="field">
-              <label for="user-login-email" class="label">Email</label>
-              <input required placeholder="Please enter your Email address" type="email" class="input">
+              <label for="email" class="label">Email</label>
+              <input required id="email" name="email" placeholder="Please enter your Email address" type="email" class="input">
             </div>
 
             <div class="field">
-              <label for="user-signup-password" class="label">Password</label>
-              <input required placeholder="Please enter your password" type="password" class="input" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$">
+              <label for="password" class="label">Password</label>
+              <input required id="password" name="password" placeholder="Please enter your password" type="password" class="input" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$">
               <p class="help">Password must be 8 chars long, include upper/lowercase + a number</p>
             </div>
 
